tests/buffer/errors/binary_write_oob.dby
import std.buffer as buf
import std.binary as bin
let b = buf.new(2)
bin.write_u32_le(b, 0, 1)
